controls/C-0078/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "kubescape-c-0078-only-allow-images-from-allowed-registry"
  labels:
    controlId: "C-0078"
  annotations:
    controlUrl: "https://kubescape.io/docs/controls/c-0078/"
spec:
  failurePolicy: Fail
  paramKind:
    apiVersion: kubescape.io/v1
    kind: ControlConfiguration
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments","replicasets","daemonsets","statefulsets"]
    - apiGroups:   ["batch"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["jobs","cronjobs"]
  validations:
    - expression: >
        object.kind != 'Pod' ||
        object.spec.containers.all(container, params.settings.imageRepositoryAllowList.exists(registry,
        (
          (registry == 'docker.io' && (!container.image.contains('/') || (!container.image.split('/')[0].contains('.') && !container.image.split('/')[0].contains(':') && container.image.split('/')[0] != 'localhost'))) ||
          (container.image.startsWith(registry + '/'))
        )))
      message: "Pods uses an image from a registry that is not in the allow list! (see more at https://kubescape.io/docs/controls/c-0078/)"
    - expression: >
        ['Deployment','ReplicaSet','DaemonSet','StatefulSet','Job'].all(kind, object.kind != kind) ||
        object.spec.template.spec.containers.all(container, params.settings.imageRepositoryAllowList.exists(registry,
        (
          (registry == 'docker.io' && (!container.image.contains('/') || (!container.image.split('/')[0].contains('.') && !container.image.split('/')[0].contains(':') && container.image.split('/')[0] != 'localhost'))) ||
          (container.image.startsWith(registry + '/'))
        )))
      message: "Workloads uses an image from a registry that is not in the allow list! (see more at https://kubescape.io/docs/controls/c-0078/)"
    - expression: >
        object.kind != 'CronJob' ||
        object.spec.jobTemplate.spec.template.spec.containers.all(container, params.settings.imageRepositoryAllowList.exists(registry,
        (
          (registry == 'docker.io' && (!container.image.contains('/') || (!container.image.split('/')[0].contains('.') && !container.image.split('/')[0].contains(':') && container.image.split('/')[0] != 'localhost'))) ||
          (container.image.startsWith(registry + '/'))
        )))
      message: "CronJob uses an image from a registry that is not in the allow list! (see more at https://kubescape.io/docs/controls/c-0078/)"
